Remove old neutrino params
