# server/docs/swagger.yaml
@@ -4,14 +4,6 @@ definitions:
     properties:
       desc:
         type: string
-      enhanceBreathiness:
-        type: number
-      formantShift:
-        default: 1
-        type: number
-      inference:
-        default: 3
-        type: integer
       model:
         default: MERROW
         description: NEUTRINO
@@ -20,30 +12,9 @@ definitions:
       neutrinoVersion:
         description: Info
         type: string
-      parallel:
-        default: 1
-        type: integer
-      pitchShiftNsf:
-        description: NSF
-        type: number
-      pitchShiftWorld:
-        description: WORLD
-        type: number
-      randomSeed:
-        default: 1234
-        type: integer
       score:
-        description: |-
-          musicXML_to_label
-          Suffix string `yaml:"suffix"`
-          Project settings
+        description: Project settings
         type: string
-      smoothFormant:
-        type: number
-      smoothPitch:
-        type: number
-      styleShift:
-        type: integer
       supportModel:
         type: string
       supportModelData: {}
@@ -202,49 +173,17 @@ paths:
         name: score
         required: true
         type: file
-      - description: '[0, 100]%, default: 0 (before NEUTRINO v3)'
-        in: formData
-        name: enhanceBreathiness
-        type: number
-      - description: 'default: 1.0 (before NEUTRINO v3)'
-        in: formData
-        name: formantShift
-        type: number
-      - description: '[2, 3, 4], default: 2 (before NEUTRINO v3)'
-        in: formData
-        name: inference
-        type: integer
       - description: 'default: MERROW'
         in: formData
         name: model
         type: string
-      - description: (NEUTRINO v3)
+      - description: support singer library
         in: formData
         name: supportModel
         type: string
-      - description: 'default: 0 (NEUTRINO v3)'
-        in: formData
-        name: transpose
-        type: integer
-      - description: 'default: 0 (before NEUTRINO v3)'
-        in: formData
-        name: pitchShiftNsf
-        type: number
-      - description: 'default: 0 (before NEUTRINO v3)'
-        in: formData
-        name: pitchShiftWorld
-        type: number
-      - description: '[0, 100]%, default: 0 (before NEUTRINO v3)'
-        in: formData
-        name: smoothFormant
-        type: number
-      - description: '[0, 100]%, default: 0 (before NEUTRINO v3)'
-        in: formData
-        name: smoothPitch
-        type: number
       - description: 'default: 0'
         in: formData
-        name: styleShift
+        name: transpose
         type: integer
       produces:
       - application/json
@@ -369,26 +308,6 @@ paths:
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: download wav
-  /proc/{id}/world_wav:
-    get:
-      description: download world wav file generated by pneutrinoutil (before NEUTRINO
-        v3)
-      parameters:
-      - description: request id
-        in: path
-        name: id
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/handler.ErrorResponse'
-      summary: download world wav
   /proc/search:
     get:
       description: search processes by status, created_at, title prefix, order by
