# server/handler/get.go
@@ -277,21 +277,3 @@ func (g *Get) Wav(c echo.Context) error {
 		return Error(c, http.StatusNotFound, "not found")
 	})(c)
 }
-
-// Download world wav file generated by pneutrinoutil.
-//
-// @summary download world wav
-// @description download world wav file generated by pneutrinoutil (before NEUTRINO v3)
-// @param id path string true "request id"
-// @success 200 {string} file
-// @failure 404 {object} handler.ErrorResponse
-// @router /proc/{id}/world_wav [get]
-func (g *Get) WorldWav(c echo.Context) error {
-	return g.withResult(func(c echo.Context, r *result) error {
-		if objectID := r.resultObjectID; objectID != nil {
-			c.Response().Header().Set("Content-Disposition", fmt.Sprintf(`attachment; filename="%s_world.wav"`, r.basename))
-			return g.withResultObjectFileBlob(*objectID, "audio/wav", r.basename+"_world.wav")(c)
-		}
-		return Error(c, http.StatusNotFound, "not found")
-	})(c)
-}
