# server/handler/start.go
@@ -24,17 +24,9 @@ import (
 // @summary start a process
 // @description start a pneutrinoutil process with given arguments
 // @param score formData file true "musicxml"
-// @param enhanceBreathiness formData number false "[0, 100]%, default: 0 (before NEUTRINO v3)"
-// @param formantShift formData number false "default: 1.0 (before NEUTRINO v3)"
-// @param inference formData integer false "[2, 3, 4], default: 2 (before NEUTRINO v3)"
 // @param model formData string false "default: MERROW"
-// @param supportModel formData string false "(NEUTRINO v3)"
-// @param transpose formData integer false "default: 0 (NEUTRINO v3)"
-// @param pitchShiftNsf formData number false "default: 0 (before NEUTRINO v3)"
-// @param pitchShiftWorld formData number false "default: 0 (before NEUTRINO v3)"
-// @param smoothFormant formData number false "[0, 100]%, default: 0 (before NEUTRINO v3)"
-// @param smoothPitch formData number false "[0, 100]%, default: 0 (before NEUTRINO v3)"
-// @param styleShift formData integer false "default: 0" (before NEUTRINO v3)
+// @param supportModel formData string false "support singer library"
+// @param transpose formData integer false "default: 0"
 // @produce json
 // @success 202 {object} handler.SuccessResponse[string] "new process started"
 // @header 202 {string} string x-request-id "request id, or just id"
@@ -56,17 +48,9 @@ func (s *Start) Handler(c echo.Context) error {
 // GetFormArgs extracts arguments for pneutrinoutil from the form values.
 func (Start) GetFormArgs(c echo.Context) map[string]string {
 	keys := []string{
-		"enhanceBreathiness",
-		"formantShift",
-		"inference",
 		"model",
 		"supportModel",
 		"transpose",
-		"pitchShiftNsf",
-		"pitchShiftWorld",
-		"smoothFormant",
-		"smoothPitch",
-		"styleShift",
 	}
 	d := map[string]string{}
 	for _, k := range keys {
